nginx-health.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-http-healthcheck-tao
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
    readinessProbe:
      httpGet:
          path: /
          port: 80
      initialDelaySeconds: 5
      timeoutSeconds: 10
    livenessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 30
      timeoutSeconds: 10
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-http-healthcheck-first
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
    readinessProbe:
      httpGet:
          path: /
          port: 80
      initialDelaySeconds: 5
      timeoutSeconds: 10
    livenessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 30
      timeoutSeconds: 10
