nginx-resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-resource-first
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    resources:
      requests:
        memory: 256Mi
        cpu: 500m
      limits:
        memory: 512Mi
        cpu: 1000m
