nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-first-23
spec:
  containers:
  - name: nginx
    image: nginx:alpine
