deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-whoami-deployment
spec:
  selector:
    matchLabels:
      app: first-whoami
  replicas: 2
  template:
    metadata:
      labels:
        app: first-whoami
    spec:
      containers:
      - name: first-whoami
        image: jwilder/whoami
        ports:
         - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: first-whoami-service
spec:
  selector:
    app: first-whoami
  ports:
  - name: first-whoami
    port: 8080
    targetPort: 8000
    protocol: TCP
